Removed extra fields in TA hour sub evaluation

--- a/src/components/hour-evaluation.html
+++ b/src/components/hour-evaluation.html
@@ -327,8 +327,6 @@
                             <th>Full Name</th>
                             <th>B00#</th>
                             <th>Course ID</th>
-                            <th>CRN</th>
-                            <th>Submission Time</th>
                             <th>Status</th>
                             <th>Details</th>
                           </tr>
@@ -339,8 +337,6 @@
                             <td>Mark Otto</td>
                             <td>B00891215</td>
                             <td>CSCI 1180</td>
-                            <td>108050</td>
-                            <td>12:30PM, Jan 18, 2020</td>
                             <td>
                               <div class="mb-2 mr-2 badge badge-success">
                                 Approved
@@ -362,8 +358,6 @@
                             <td>Sreya Goshal</td>
                             <td>B00891216</td>
                             <td>CSCI 1183</td>
-                            <td>108051</td>
-                            <td>12:00AM, Jan 20, 2020</td>
                             <td>
                               <div class="mb-2 mr-2 badge badge-danger">
                                 Declined
@@ -385,8 +379,6 @@
                             <td>Hassan Saleh</td>
                             <td>B00891217</td>
                             <td>CSCI 1186</td>
-                            <td>108052</td>
-                            <td>04:30AM, Jan 05, 2020</td>
                             <td>
                               <div class="mb-2 mr-2 badge badge-warning">
                                 Pending
@@ -425,8 +417,6 @@
                             <th>Full Name</th>
                             <th>B00#</th>
                             <th>Course ID</th>
-                            <th>CRN</th>
-                            <th>Submission Time</th>
                             <th>Status</th>
                             <th>Details</th>
                           </tr>
@@ -437,8 +427,6 @@
                             <td>Mark Otto</td>
                             <td>B00891215</td>
                             <td>CSCI 1180</td>
-                            <td>108050</td>
-                            <td>12:30PM, Jan 18, 2020</td>
                             <td>
                               <div class="mb-2 mr-2 badge badge-success">
                                 Approved
@@ -460,8 +448,6 @@
                             <td>Sreya Goshal</td>
                             <td>B00891216</td>
                             <td>CSCI 1183</td>
-                            <td>108051</td>
-                            <td>12:00AM, Jan 20, 2020</td>
                             <td>
                               <div class="mb-2 mr-2 badge badge-danger">
                                 Declined
@@ -483,8 +469,6 @@
                             <td>Hassan Saleh</td>
                             <td>B00891217</td>
                             <td>CSCI 1186</td>
-                            <td>108052</td>
-                            <td>04:30AM, Jan 05, 2020</td>
                             <td>
                               <div class="mb-2 mr-2 badge badge-warning">
                                 Pending
@@ -605,6 +589,9 @@
                 </li>
                 <li class="list-group-item">Term: Summer</li>
                 <li class="list-group-item">Year: 2020</li>
+                <li class="list-group-item">
+                  Submission Time: 12:30PM, Jan 18, 2020
+                </li>
               </ul>
             </div>
             <div class="card-body">
@@ -668,6 +655,9 @@
                 </li>
                 <li class="list-group-item">Term: Summer</li>
                 <li class="list-group-item">Year: 2020</li>
+                <li class="list-group-item">
+                  Submission Time: 12:30PM, Jan 18, 2020
+                </li>
               </ul>
             </div>
             <div class="card-body">
@@ -737,6 +727,9 @@
                 </li>
                 <li class="list-group-item">Term: Summer</li>
                 <li class="list-group-item">Year: 2020</li>
+                <li class="list-group-item">
+                  Submission Time: 12:30PM, Jan 18, 2020
+                </li>
               </ul>
             </div>
             <div class="card-body">
@@ -794,6 +787,9 @@
                 </li>
                 <li class="list-group-item">Term: Summer</li>
                 <li class="list-group-item">Year: 2020</li>
+                <li class="list-group-item">
+                  Submission Time: 12:30PM, Jan 18, 2020
+                </li>
               </ul>
             </div>
             <div class="card-body">
