--- a/src/components/calender.html
+++ b/src/components/calender.html
@@ -1,59 +1,12 @@
-<style>
-.calendar__week,
-.calendar__header {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);  
-}
-.calendar__week { 
-  grid-auto-rows: 100px;
-}
-
-.calendar__week > p {
-  text-align: center;
-}
-
-.calendar__date {
-  text-align: right;
-}
-
-.calendar__header {
-  grid-auto-rows: 50px;
-  align-items: center;
-  text-align: center;
-}
-
-.calendar__day {
-  padding: 16px;
-  text-align: right;
-}
-
-
-.calendar {
-  background-color: white;
-  border: 1px solid #e1e1e1;
-  width: 270px;
-  position: absolute;
-  right: 150px;
-}
-
-
-.calendar__header > div {
-  font-size: 0.8em;
-  font-weight: bold;
-}
-
-.calendar__day {
-  border-right: 1px solid #e1e1e1;
-  border-top: 1px solid #e1e1e1;
-}
-
-</style>
+<!--A calendar component for both TA and Prof dashboard-->
+<link href="../../src/styles/custom-styles/styles.calendar.css" rel="stylesheet"/>
+<link href="../styles/architectui-html-free/architectui-html-free/main.css" rel="stylesheet"/>
     <main>
-      <div class="calendar">
+      <div class="main-card mb-3 card">
         <div class="calendar__header">
-          <div>Mon</div>
-          <div>Tue</div>
-          <div>Wed</div>
+          <div class="card-title">Mon</div>
+          <div class="card-title">Tue</div>
+          <div class="card-title">Wed</div>
           <!-- <div>thu</div>
           <div>fri</div>
           <div>sat</div>
@@ -61,17 +14,17 @@
         </div>
         <div class="calendar__week">
           <div class="calendar__day">
-            <div class="calender_date">1</div>
-            <p>Course <br> Busy</p>
+            <div class="calender_date card-title">1</div>
+            <p class="card-subtitle">CSCI 1170 <br> Busy</p>
           </div>
           <div class="calendar__day">
-            <div class="calender_date">2</div>
-            <p>Course <br> Busy</p>
+            <div class="calender_date card-title">2</div>
+            <p class="card-subtitle">CSCI 2100 <br> Busy</p>
           </div>
           <div class="calendar__day">
-            <div class="calender_date">3</div>
-            <p>Course <br> Busy</p>
+            <div class="calender_date card-title">3</div>
+            <p class="card-subtitle">CSCI 1170 <br> Busy</p>
           </div>
-        </div>
+        </div> 
       </div>
     </main>
