--- a/src/components/tags.html
+++ b/src/components/tags.html
@@ -1,34 +1,67 @@
 <!--Tags used to filter searches based on recents and all the tags available-->
-<link href="../styles/architectui-html-free/architectui-html-free/main.css" rel="stylesheet"/>
+<link
+  href="../styles/architectui-html-free/architectui-html-free/main.css"
+  rel="stylesheet"
+/>
 <div class="main-card mb-3 card">
-    <div class="card-body"><h5 class="card-title">Tags</h5><h6 class="card-subtitle">Click on a tag to filter job postings</h6><br>
-        <div class="d-inline-block">
-            <h6 class="mb-0 card-subtitle">Recents: </h6>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-focus"><p>CS(1)</p></button>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-focus"><p>Web-Dev(3)</p></button>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-focus"><p>Cloud-Computing(1)</p></button>
-        </div>
-
-        <br>
-        <div class="d-inline-block">
-            <h6 class="mb-0 card-subtitle">All: </h6>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light"><p>CS(1)</p></button>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light"><p>Web-Dev(3)</p></button>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light"><p>Cloud-Computing(1)</p></button>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light"><p>Graphics(7)</p></button>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light"><p>Intro-Programming(10)</p></button>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light"><p>Robotics(4)</p></button>
-            <br>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light"><p>Server-Side-Scripting(5)</p></button>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light"><p>Python(3)</p></button>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light"><p>Algorithms(10)</p></button>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light"><p>Systems-Programming(7)</p></button>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light"><p>Software-Dev(10)</p></button>
-            <br>
-            <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light"><p>Java(4)</p></button>
-
-        </div>
+  <div class="card-body">
+    <h5 class="card-title">Tags</h5>
+    <h6 class="card-subtitle">Click on a tag to filter job postings</h6>
+    <br />
+    <div class="d-inline-block">
+      <h6 class="mb-0 card-subtitle">Recents:</h6>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-focus">
+        <p>CS(1)</p>
+      </button>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-focus">
+        <p>Web-Dev(3)</p>
+      </button>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-focus">
+        <p>Cloud-Computing(1)</p>
+      </button>
     </div>
 
-    
+    <br />
+    <div class="d-inline-block">
+      <h6 class="mb-0 card-subtitle">All:</h6>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+        <p>CS(1)</p>
+      </button>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+        <p>Web-Dev(3)</p>
+      </button>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+        <p>Cloud-Computing(1)</p>
+      </button>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+        <p>Graphics(7)</p>
+      </button>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+        <p>Intro-Programming(10)</p>
+      </button>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+        <p>Robotics(4)</p>
+      </button>
+      <br />
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+        <p>Server-Side-Scripting(5)</p>
+      </button>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+        <p>Python(3)</p>
+      </button>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+        <p>Algorithms(10)</p>
+      </button>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+        <p>Systems-Programming(7)</p>
+      </button>
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+        <p>Software-Dev(10)</p>
+      </button>
+      <br />
+      <button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+        <p>Java(4)</p>
+      </button>
+    </div>
+  </div>
 </div>
